SERVER-54168: TenantOplogApplier should join TenantOplogBatcher