src/mongo/db/repl/oplog_fetcher.h
@@ -327,6 +327,8 @@ private:
      */
     void _doShutdown_inlock() noexcept override;
 
+    void _preJoin() noexcept override {}
+
     Mutex* _getMutex() noexcept override;
 
     // ============= End AbstractAsyncComponent overrides ==============
